--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "cra-template": "1.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
@@ -13,7 +15,9 @@
     "reactstrap": "^8.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "postinstall": " [ \"$NODE_ENV\" == production ] &&  yarn build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
